# dynamics

./: .gitignore  README.md  ReadMe.md  _version.py  pyproject.toml  test.ipynb  test_expect.py
dynamics/: __init__.py  saving.py
dynamics/callbacks/: __init__.py  _convergence.py  _hamiltonian.py  _sampler.py  _time.py  _vstate.py
dynamics/driver/: __init__.py  exact.py  trotter.py
dynamics/exact/: __init__.py  state.py  tdvp.py
dynamics/frequencies/: __init__.py  _constant.py  _cubic.py  _extrapolate.py  _linear.py  _quadratic.py  base.py
dynamics/logging/: __init__.py  netket_logs.py
dynamics/models/: __init__.py  _dense_jastrows.py  _factorized_jastrow.py  _general_jastrow.py  _meanfield.py  _rbm.py  _rotations.py  _vec_to_matrix.py
dynamics/new/: linear_solver.py
dynamics/observables/: __init__.py  _r2.py
dynamics/observables/entropy/: __init__.py  _renyi2_fcts.py  expect.py  expect_old.py  operator.py
dynamics/operators/: __init__.py  _paulis.py  _typical_hamiltonians.py  _typical_operators.py
dynamics/operators/common/: __init__.py  _ss.py  base.py  identity.py  sigma_x.py  sigma_z.py
dynamics/operators/hamiltonian/: __init__.py  _rydberg.py  _spin_glass.py  base.py
dynamics/sampler/rules/: __init__.py  cluster_flip.py
dynamics/schedules/: __init__.py  _chebyshev.py  _constant.py  _cubic.py  _extrapolate.py  _linear.py  _quadratic.py  base.py
dynamics/utils/: __init__.py  logs.py
tests/: my_operators.py
